prod_snapshot_2015-09-24_1030/objects/Yipit__c.object
<CustomObject>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ended__c</fullName>
        <label>Date Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealId__c</fullName>
        <externalId>true</externalId>
        <label>DealId</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DealSite__c</fullName>
        <label>DealSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealURL__c</fullName>
        <label>DealURL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Revenue__c</fullName>
        <formula>IF(AND(ISNUMBER(Price__c),ISNUMBER(Sold__c)),

VALUE(Price__c ) *  VALUE(Sold__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Title__c</fullName>
        <label>Full Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Yipits</relationshipLabel>
        <relationshipName>Yipits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Address__c</fullName>
        <label>Merchant Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Category__c</fullName>
        <label>Merchant Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_City__c</fullName>
        <label>Merchant City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <label>Merchant Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Phone__c</fullName>
        <label>Merchant Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Postal__c</fullName>
        <label>Merchant Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Website__c</fullName>
        <label>Merchant Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Group__c</fullName>
        <formula>LEFT( Merchant_Postal__c , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Index__c</fullName>
        <label>Rev Index</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Per_Day__c</fullName>
        <formula>IF(Date_Ended__c &gt; TODAY(),(Deal_Revenue__c/(TODAY()- Date_Added__c+1)),Deal_Revenue__c/(Date_Ended__c- Date_Added__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rate Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <label>Sold</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yipit_URL__c</fullName>
        <label>Yipit URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Yipit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Division__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Value__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Phone__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Address__c</columns>
        <columns>Merchant_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>1999</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>Nation</value>
        </filters>
        <filters>
            <field>DealSite__c</field>
            <operation>notContain</operation>
            <value>chicken</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Yipits_Q4_to_now</fullName>
        <columns>Market__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Phone__c</columns>
        <columns>Merchant_Website__c</columns>
        <columns>DealSite__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Added__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2013</value>
        </filters>
        <label>All Yipits - Q4 to now</label>
    </listViews>
    <listViews>
        <fullName>CreatedToday</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DealId__c</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>CreatedTodayNonNational</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DealId__c</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>Nation</value>
        </filters>
        <label>Created Today Non-National</label>
    </listViews>
    <listViews>
        <fullName>CreatedYesterday</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Yesterday</label>
    </listViews>
    <listViews>
        <fullName>CreatedYesterdayNonNational</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>Nation</value>
        </filters>
        <label>Created Yesterday Non-National</label>
    </listViews>
    <listViews>
        <fullName>MarketSpecific</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Added__c</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Sales_Rate_Per_Day__c</columns>
        <columns>Deal_Revenue__c</columns>
        <columns>Market__c</columns>
        <columns>Division__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Category__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>Lansing</value>
        </filters>
        <label>Market Specific</label>
    </listViews>
    <listViews>
        <fullName>MarketUpdate</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Division__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Category__c</columns>
        <columns>DealSite__c</columns>
        <columns>Merchant_Postal__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Ended__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>MarketUpdate</label>
    </listViews>
    <listViews>
        <fullName>ModifiedToday</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Added__c</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Sales_Rate_Per_Day__c</columns>
        <columns>Deal_Revenue__c</columns>
        <columns>Market__c</columns>
        <columns>Division__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Category__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Modified Today</label>
    </listViews>
    <listViews>
        <fullName>ModifiedYesterday</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Added__c</columns>
        <columns>Price__c</columns>
        <columns>Sold__c</columns>
        <columns>Sales_Rate_Per_Day__c</columns>
        <columns>Deal_Revenue__c</columns>
        <columns>Market__c</columns>
        <columns>Division__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Category__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Modified Yesterday</label>
    </listViews>
    <listViews>
        <fullName>Rev_Indx_greater_1_5_not_national</fullName>
        <columns>NAME</columns>
        <columns>DealSite__c</columns>
        <columns>Market__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>Price__c</columns>
        <columns>Value__c</columns>
        <columns>Sold__c</columns>
        <columns>Merchant_Phone__c</columns>
        <columns>Merchant_Website__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_Added__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>Rev_Index__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rev_Index__c</field>
            <operation>greaterOrEqual</operation>
            <value>1.5</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notContain</operation>
            <value>national</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>notContain</operation>
            <value>national</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Rev_Index__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </filters>
        <label>Rev Indx greater 1.5, not national</label>
    </listViews>
    <listViews>
        <fullName>Revenue_Index2</fullName>
        <columns>Merchant_Name__c</columns>
        <columns>DealSite__c</columns>
        <columns>Rev_Index__c</columns>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Date_Added__c</columns>
        <columns>Date_Ended__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>washington,virginia,montgomery</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>notContain</operation>
            <value>AL</value>
        </filters>
        <label>Revenue Index</label>
    </listViews>
    <listViews>
        <fullName>Revenue_Index_above_1</fullName>
        <columns>Date_Added__c</columns>
        <columns>Date_Ended__c</columns>
        <columns>DealSite__c</columns>
        <columns>Market__c</columns>
        <columns>Rev_Index__c</columns>
        <columns>Merchant_City__c</columns>
        <columns>Merchant_Name__c</columns>
        <columns>Merchant_Phone__c</columns>
        <columns>Merchant_Website__c</columns>
        <columns>Price__c</columns>
        <columns>Value__c</columns>
        <columns>Merchant_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>reno</value>
        </filters>
        <filters>
            <field>Rev_Index__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Rev_Index__c</field>
            <operation>notEqual</operation>
            <value>n/a</value>
        </filters>
        <label>Revenue Index above 1</label>
    </listViews>
    <nameField>
        <label>Yipit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yipits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>